--- a/ODOS.GatewayAPI/ODOS.GatewayAPI/appsettings.json
+++ b/ODOS.GatewayAPI/ODOS.GatewayAPI/appsettings.json
@@ -7,7 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=NSQADB5\\MSSQL2022;Database=ODOS;TrustServerCertificate=True;MultipleActiveResultSets=true;User=MES_USER;Password=Mes@123"
+    "DefaultConnection": "Server=NSPRDDB19\\MSSQL2022;Database=ODOS;TrustServerCertificate=True;MultipleActiveResultSets=true;User=ndswebapps;Password=DBAdmin4*NDS"
+    //"DefaultConnection": "Server=NSQADB5\\MSSQL2022;Database=ODOS;TrustServerCertificate=True;MultipleActiveResultSets=true;User=MES_USER;Password=Mes@123"
   },
   "AllowedCors": "http://localhost:4200/"
 }
