--- a/Microservices/WBSService/appsettings.json
+++ b/Microservices/WBSService/appsettings.json
@@ -7,7 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=NSQADB5\\MSSQL2022;Database=ODOS;TrustServerCertificate=True;MultipleActiveResultSets=true;User=NDSWebApps;Password=NDS4DBAdmin*"
+    "DefaultConnection": "Server=NSPRDDB19\\MSSQL2022;Database=ODOS;TrustServerCertificate=True;MultipleActiveResultSets=true;User=ndswebapps;Password=DBAdmin4*NDS"
+    //"DefaultConnection": "Server=NSQADB5\\MSSQL2022;Database=ODOS;TrustServerCertificate=True;MultipleActiveResultSets=true;User=NDSWebApps;Password=NDS4DBAdmin*"
     //"DefaultConnection": "Server=nsprddb10\\MSSQL2022;Database=ODOS;TrustServerCertificate=True;MultipleActiveResultSets=true;User=ndswebapps;Password=DBAdmin4*NDS"
   },
   "AllowedCors": "http://localhost:4200/"
