NSQADB5 to NSPRDDB19

--- a/Microservices/CommonServices/appsettings.json
+++ b/Microservices/CommonServices/appsettings.json
@@ -7,11 +7,11 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=NSQADB5\\MSSQL2022;Database=ODOS;TrustServerCertificate=True;MultipleActiveResultSets=true;User=MES_USER;Password=Mes@123",
-    //"DefaultConnection": "Server=NSQADB5.natsteel.corp;Database=ODOS;TrustServerCertificate=True;MultipleActiveResultSets=true;User=ndswebapps;Password=NDS4DBAdmin*",
+    "DefaultConnection": "Server=NSPRDDB19\\MSSQL2022;Database=ODOS;TrustServerCertificate=True;MultipleActiveResultSets=true;User=ndswebapps;Password=DBAdmin4*NDS",
+    //"DefaultConnection": "Server=NSPRDDB19\\MSSQL2022;Database=ODOS;TrustServerCertificate=True;MultipleActiveResultSets=true;User=ndswebapps;Password=DBAdmin4*NDS",
     "STSConnection": "Server=NSQADB2.natsteel.corp;Database=STS;TrustServerCertificate=True;MultipleActiveResultSets=true;User=stsapp;Password=stsapp123"
 
-    //"DefaultConnection": "Server=nsprddb10\\MSSQL2022;Database=ODOS;TrustServerCertificate=True;MultipleActiveResultSets=true;User=ndswebapps;Password=DBAdmin4*NDS"
+    //"DefaultConnection": "Server=NSPRDDB19\\MSSQL2022;Database=ODOS;TrustServerCertificate=True;MultipleActiveResultSets=true;User=ndswebapps;Password=DBAdmin4*NDS"
   },
 
 
