--- a/Microservices/DetailingService/appsettings.json
+++ b/Microservices/DetailingService/appsettings.json
@@ -8,8 +8,8 @@
   "AllowedHosts": "*",
   //"DSSBOMPDF": "\\C1CDT340\\BOMDrawing\",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=NSQADB5\\MSSQL2022;Database=ODOS;TrustServerCertificate=True;MultipleActiveResultSets=true;User=MES_USER;Password=Mes@123"
-    //"DefaultConnection": "Server=nsprddb10\\MSSQL2022;Database=ODOS;TrustServerCertificate=True;MultipleActiveResultSets=true;User=ndswebapps;Password=DBAdmin4*NDS"
+    "DefaultConnection": "Server=NSPRDDB19\\MSSQL2022;Database=ODOS;TrustServerCertificate=True;MultipleActiveResultSets=true;User=ndswebapps;Password=DBAdmin4*NDS"
+    //"DefaultConnection": "Server=NSPRDDB19\\MSSQL2022;Database=ODOS;TrustServerCertificate=True;MultipleActiveResultSets=true;User=ndswebapps;Password=DBAdmin4*NDS"
   },
   //{
   //  "BOMDrawingPath": "\\172.18.1.224\BOMDrawing\"
