--- a/Microservices/OrderService/appsettings.json
+++ b/Microservices/OrderService/appsettings.json
@@ -7,7 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=NSQADB5\\MSSQL2022;Database=ODOS;TrustServerCertificate=True;MultipleActiveResultSets=true;User=ndswebapps;Password=NDS4DBAdmin*",
+    "DefaultConnection": "Server=NSPRDDB19\\MSSQL2022;Database=ODOS;TrustServerCertificate=True;MultipleActiveResultSets=true;User=ndswebapps;Password=DBAdmin4*NDS",
+    //"DefaultConnection": "Server=NSPRDDB19\\MSSQL2022;Database=ODOS;TrustServerCertificate=True;MultipleActiveResultSets=true;User=ndswebapps;Password=DBAdmin4*NDS",
     "SAPDestination": "ASHOST=172.25.101.5;SYSNR=01;CLIENT=600;USER=IFSOMAINTAIN;PASSWD=Natsteel@1"
 
 
