--- a/Microservices/SAP_API/SAP_API/Web.config
+++ b/Microservices/SAP_API/SAP_API/Web.config
@@ -36,10 +36,10 @@
     </ClientSettings>
   </SAP.Middleware.Connector>
   <connectionStrings>
-    <!--<add name="DefaultConnection" connectionString="Server=nsprddb10\MSSQL2022;Database=ODOS;User ID=ndswebapps; Password=DBAdmin4*NDS; MultipleActiveResultSets=true;" providerName="System.Data.SqlClient" />-->
-    <add name="DefaultConnection" connectionString="Server=NSQADB5\\MSSQL2022,1433;Database=ODOS;User ID=MES_USER; Password=Mes@123; MultipleActiveResultSets=true;" providerName="System.Data.SqlClient" />
+    <!--<add name="DefaultConnection" connectionString="Server=NSPRDDB19\\MSSQL2022\MSSQL2022;Database=ODOS;User ID=ndswebapps; Password=DBAdmin4*NDS; MultipleActiveResultSets=true;" providerName="System.Data.SqlClient" />-->
+    <add name="DefaultConnection" connectionString="Server=NSPRDDB19\\MSSQL2022,1433;Database=ODOS;User ID=MES_USER; Password=DBAdmin4*NDS; MultipleActiveResultSets=true;" providerName="System.Data.SqlClient" />
     <!-- PROD -->
-    <!--<add name="DefaultConnection" connectionString="Server=NSPRDDB10,1433;Database=NDSDB;User ID=ndswebapps; Password=DBAdmin4*NDS; MultipleActiveResultSets=true;" providerName="System.Data.SqlClient" />-->
+    <!--<add name="DefaultConnection" connectionString="Server=NSPRDDB19\\MSSQL2022,1433;Database=NDSDB;User ID=ndswebapps; Password=DBAdmin4*NDS; MultipleActiveResultSets=true;" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
