--- a/Microservices/OrderService/web.config
+++ b/Microservices/OrderService/web.config
@@ -25,8 +25,8 @@
     </ClientSettings>
   </SAP.Middleware.Connector>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Server=NSQADB5\\MSSQL2022,1433;Database=ODOS;User ID=MES_USER; Password=Mes@123; MultipleActiveResultSets=true;" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Server=NSPRDDB19\\MSSQL2022,1433;Database=ODOS;User ID=ndswebapps; Password=DBAdmin4*NDS; MultipleActiveResultSets=true;" providerName="System.Data.SqlClient" />
     <!-- PROD -->
-    <!--<add name="DefaultConnection" connectionString="Server=nsprddb10\MSSQL2022;Database=ODOS;User ID=ndswebapps; Password=DBAdmin4*NDS; MultipleActiveResultSets=true;" providerName="System.Data.SqlClient" />-->
+    <!--<add name="DefaultConnection" connectionString="Server=NSPRDDB19\\MSSQL2022\MSSQL2022;Database=ODOS;User ID=ndswebapps; Password=DBAdmin4*NDS; MultipleActiveResultSets=true;" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
 </configuration>
